test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_usage.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(usage=1)]
    fn child(){}
}

fn main(){}